# human_aware_cost_functions_tests

./: README.md
cells/human_aware_cost_functions_cells/: CMakeLists.txt  package.xml
cells/human_aware_cost_functions_cells/config/: scene_objects.yaml  static_scene_3d_simple.yaml  static_scene_high_dof.yaml
cells/human_aware_cost_functions_cells/urdf/: cell_3d_simple.xacro
cells/human_aware_cost_functions_tests_3d_simple/: .setup_assistant  CMakeLists.txt  package.xml
cells/human_aware_cost_functions_tests_3d_simple/config/: cell_3d_simple.srdf  gazebo_cell_3d_simple.urdf  ompl_planning.yaml
cells/human_aware_cost_functions_tests_3d_simple/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
cells/human_ware_cost_functions_cells/config/: static_scene_3d_simple.yaml
length_penalty_metrics_tests/: CMakeLists.txt  package.xml
length_penalty_metrics_tests/config/: test_length_penalty_metric.yaml  test_length_penalty_metric_parallel.yaml  test_length_penalty_metric_speed_3d_simple.yaml  test_length_penalty_metric_speed_6d.yaml  test_nn_performance.yaml
length_penalty_metrics_tests/launch/: test_length_penalty_metric.launch  test_length_penalty_metric_parallel.launch  test_length_penalty_metric_speed_3d_simple.launch  test_length_penalty_metric_speed_6d.launch  test_nn_performance.launch  test_rosdyn_clone.launch
length_penalty_metrics_tests/src/: test_length_penalty_metrics.cpp  test_length_penalty_metrics_parallel.cpp  test_length_penalty_metrics_speed.cpp  test_nn_performance.cpp  test_rosdyn_clone.cpp
