<?xml version="1.0"?>
<package format="2">
  <name>length_penalty_metrics_tests</name>
  <version>0.0.0</version>
  <description>The length_penalty_metrics_tests package</description>

  <maintainer email="c.tonola001@unibs.it">cesare</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>length_penalty_metrics</depend>
  <depend>ssm15066_estimators</depend>
  <depend>object_loader_msgs</depend>

  <export>

  </export>
</package>
